<resources>
    <string name="app_name">Tech Lab</string>

    <string name="search">Search</string>
    <string name="shopping_basket">Shopping Basket</string>

    <string name="content_description_search">Search for product</string>
    <string name="content_description_shopping_basket">Shopping basket products</string>

    <string name="store_name">Tech Lab</string>

    <string name="tab_home">Home</string>
    <string name="tab_category">Category</string>

    <string name="application">Application</string>
    <string name="my_account">My Account</string>
    <string name="about">About Us</string>
    <string name="communicate">Communicate</string>
    <string name="share_application">Share Application</string>
    <string name="contact_us">Contact Us</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string name="views_number">%1$d views</string>
    <string name="price">$%1$d</string>
    <string name="view_all">View All</string>
    <string name="top_categories">Top Categories</string>
    <string name="welcome">Welcome</string>
    <string name="please_insert_your_account">please insert your account</string>
    <string name="connect">Connect</string>
    <string name="profile">Profile</string>
    <string name="coding_amp_designing">Coding and Designing</string>
    <string name="back_end">Backend</string>
    <string name="company">Company</string>
    <string name="mail">E-mail</string>
    <string name="version">Version</string>
    <string name="product_list">Product List</string>
    <string name="product_details">Product Details</string>
    <string name="description">Description</string>
    <string name="product_saved">Product Saved</string>
    <string name="product_unsaved">Product Unsaved</string>
    <string name="your_purchase_has_been_successfully_completed">Your purchase has been successfully completed</string>
    <string name="remove">Remove</string>
    <string name="purchase">Purchase</string>
    <string name="favorite">Favorite</string>
    <string name="product_removed_from_favorite_list">Product removed from favorite list</string>
    <string name="the_product_has_been_purchased">The product has been purchased</string>
    <string name="recently_viewed">Recently Viewed</string>

    <string name="quantity">x %1$d</string>

    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>