<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/apl_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_main"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/about" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_main_bg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/main_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/main_bg_gradient"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:src="@drawable/logo_2"
                app:layout_constraintEnd_toEndOf="@id/gl_v_end"
                app:layout_constraintStart_toStartOf="@id/gl_v_begin"
                app:layout_constraintTop_toTopOf="@id/gl_h_begin" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16sp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toTopOf="@+id/gl_h_end"
                app:layout_constraintEnd_toStartOf="@+id/gl_v_end"
                app:layout_constraintStart_toStartOf="@+id/gl_v_begin"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo"
                app:layout_constraintVertical_bias="0.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <ImageView
                        android:id="@+id/iv_coding_designing"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/coding_designing" />

                    <TextView
                        android:id="@+id/tv_coding_designing_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/coding_amp_designing"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/iv_coding_designing"
                        app:layout_constraintTop_toTopOf="@+id/iv_coding_designing" />

                    <TextView
                        android:id="@+id/tv_coder_designer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Youcef, Mike, Donald, San"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_coding_designing"
                        app:layout_constraintStart_toStartOf="@+id/tv_coding_designing_label"
                        app:layout_constraintTop_toBottomOf="@+id/tv_coding_designing_label" />

                    <View
                        android:id="@+id/v_separator_1"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/drawerListDivider"
                        app:layout_constraintEnd_toStartOf="@+id/gl_card_v_end"
                        app:layout_constraintStart_toStartOf="@+id/gl_card_v_begin"
                        app:layout_constraintTop_toBottomOf="@+id/iv_coding_designing" />

                    <ImageView
                        android:id="@+id/iv_security"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_security"
                        app:layout_constraintEnd_toEndOf="@+id/iv_coding_designing"
                        app:layout_constraintStart_toStartOf="@+id/iv_coding_designing"
                        app:layout_constraintTop_toTopOf="@+id/tv_security_label"
                        app:srcCompat="@drawable/security" />

                    <TextView
                        android:id="@+id/tv_security_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Database"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/tv_coder_designer"
                        app:layout_constraintTop_toBottomOf="@+id/v_separator_1" />

                    <TextView
                        android:id="@+id/tv_security"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Youcef, Mike, Donald, San"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintStart_toStartOf="@+id/tv_security_label"
                        app:layout_constraintTop_toBottomOf="@+id/tv_security_label" />

                    <View
                        android:id="@+id/v_separator_2"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/drawerListDivider"
                        app:layout_constraintEnd_toStartOf="@+id/gl_card_v_end"
                        app:layout_constraintStart_toStartOf="@+id/gl_card_v_begin"
                        app:layout_constraintTop_toBottomOf="@+id/tv_security" />

                    <ImageView
                        android:id="@+id/iv_company"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_company"
                        app:layout_constraintEnd_toEndOf="@+id/iv_security"
                        app:layout_constraintStart_toStartOf="@+id/iv_security"
                        app:layout_constraintTop_toTopOf="@+id/tv_company_label"
                        app:srcCompat="@drawable/company" />

                    <TextView
                        android:id="@+id/tv_company_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/company"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/tv_security"
                        app:layout_constraintTop_toBottomOf="@+id/v_separator_2" />

                    <TextView
                        android:id="@+id/tv_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Group 6"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintStart_toStartOf="@+id/tv_company_label"
                        app:layout_constraintTop_toBottomOf="@+id/tv_company_label" />

                    <View
                        android:id="@+id/v_separator_3"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/drawerListDivider"
                        app:layout_constraintEnd_toStartOf="@+id/gl_card_v_end"
                        app:layout_constraintStart_toStartOf="@+id/gl_card_v_begin"
                        app:layout_constraintTop_toBottomOf="@+id/tv_company" />

                    <ImageView
                        android:id="@+id/iv_phone"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_phone"
                        app:layout_constraintEnd_toEndOf="@+id/iv_security"
                        app:layout_constraintStart_toStartOf="@+id/iv_security"
                        app:layout_constraintTop_toTopOf="@+id/tv_phone_label"
                        android:src="@drawable/ic_mail_blue" />

                    <TextView
                        android:id="@+id/tv_phone_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/mail"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/tv_company"
                        app:layout_constraintTop_toBottomOf="@+id/v_separator_3" />

                    <TextView
                        android:id="@+id/tv_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="contact@mobidal.com"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintStart_toStartOf="@+id/tv_phone_label"
                        app:layout_constraintTop_toBottomOf="@+id/tv_phone_label" />

                    <View
                        android:id="@+id/v_separator_4"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/drawerListDivider"
                        app:layout_constraintEnd_toStartOf="@+id/gl_card_v_end"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/gl_card_v_begin"
                        app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

                    <ImageView
                        android:id="@+id/iv_version"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:src="@drawable/version"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_version"
                        app:layout_constraintEnd_toEndOf="@+id/iv_phone"
                        app:layout_constraintStart_toStartOf="@+id/iv_phone"
                        app:layout_constraintTop_toTopOf="@+id/tv_version_label" />

                    <TextView
                        android:id="@+id/tv_version_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/version"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/tv_company"
                        app:layout_constraintTop_toBottomOf="@+id/v_separator_4" />

                    <TextView
                        android:id="@+id/tv_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="1.0"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintStart_toStartOf="@+id/tv_phone_label"
                        app:layout_constraintTop_toBottomOf="@+id/tv_version_label" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/gl_card_v_begin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="16dp" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/gl_card_v_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="16dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_v_begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_v_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_h_begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_h_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>