<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryBackgroundColor">

        <RelativeLayout
            android:id="@+id/rl_connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/green_500"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_welcome"
                style="@style/WelcomeTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"/>

            <TextView
                android:id="@+id/tv_welcome_description"
                style="@style/WelcomeDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_welcome"
                android:layout_marginTop="4dp"
                android:text="@string/please_insert_your_account" />

            <android.widget.Button
                android:id="@+id/b_connect"
                style="@style/ButtonTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/connect" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_my_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:text="My Account"
            app:layout_constraintTop_toBottomOf="@id/rl_connect"
            app:layout_constraintStart_toEndOf="@id/gl_v_begin"/>

        <LinearLayout
            android:id="@+id/ll_my_commands"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:background="@color/secondaryBackgroundColor"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tv_my_account"
            app:layout_constraintEnd_toStartOf="@+id/gl_v_end"
            app:layout_constraintStart_toStartOf="@+id/gl_v_begin">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_cammand"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="My Commands"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_right"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_saved_products"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/secondaryBackgroundColor"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/ll_my_commands"
            app:layout_constraintEnd_toStartOf="@+id/gl_v_end"
            app:layout_constraintStart_toStartOf="@+id/gl_v_begin">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_save"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Saved Products"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_right"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_recently_viewed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/secondaryBackgroundColor"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/ll_saved_products"
            app:layout_constraintEnd_toStartOf="@+id/gl_v_end"
            app:layout_constraintStart_toStartOf="@+id/gl_v_begin">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_recent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Recently Viewed"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_right"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_recently_searched"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/secondaryBackgroundColor"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/ll_recently_viewed"
            app:layout_constraintEnd_toStartOf="@+id/gl_v_end"
            app:layout_constraintStart_toStartOf="@+id/gl_v_begin">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_recent_search"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Recently Searched"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_right"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_my_parameters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:text="My Parameters"
            app:layout_constraintTop_toBottomOf="@id/ll_recently_searched"
            app:layout_constraintStart_toEndOf="@id/gl_v_begin"/>

        <LinearLayout
            android:id="@+id/ll_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:background="@color/secondaryBackgroundColor"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tv_my_parameters"
            app:layout_constraintEnd_toStartOf="@+id/gl_v_end"
            app:layout_constraintStart_toStartOf="@+id/gl_v_begin">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_profile"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Details"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_right"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_address_book"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/secondaryBackgroundColor"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/ll_details"
            app:layout_constraintEnd_toStartOf="@+id/gl_v_end"
            app:layout_constraintStart_toStartOf="@+id/gl_v_begin">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_address"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Address Book"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_right"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_change_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/secondaryBackgroundColor"
            android:gravity="center"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@id/gl_h_end"
            app:layout_constraintEnd_toStartOf="@+id/gl_v_end"
            app:layout_constraintStart_toStartOf="@+id/gl_v_begin"
            app:layout_constraintTop_toBottomOf="@id/ll_address_book"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_account" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Change Password" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_right" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_v_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_v_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_h_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>